--- a/translations/texts/items/active/weapons/melee/hammer/mystichammer.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/hammer/mystichammer.activeitem.json
@@ -7,8 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "神必壬",
-      "Eng": "Mystichammer"
+      "Eng": "Mystichammer\n^red;Deals Physical Damage^reset;"
     }
   },
   {
