--- a/translations/texts/items/active/weapons/melee/scythe/honeyscythe.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/scythe/honeyscythe.activeitem.json
@@ -7,8 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "蜂窝的巧妙用途。",
-      "Eng": "A clever use of honeycombs."
+      "Eng": "A clever use of honeycombs.\n^red;Inflicts Bee Stings^reset;"
     }
   },
   {
