--- a/translations/texts/items/active/weapons/melee/shortsword/shadowburst.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/shortsword/shadowburst.activeitem.json
@@ -7,8 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "于暗影中收割生命，以未知材料制成。",
-      "Eng": "A soul-cleaver of ageless, unknown materials."
+      "Eng": "A soul-cleaver of ageless, unknown materials.\n^red;Inflicts Bleeding^reset;"
     }
   },
   {
