--- a/translations/texts/items/active/weapons/melee/broadsword/energyblade2.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/broadsword/energyblade2.activeitem.json
@@ -19,8 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "极具破坏性。不要戳到你的眼睛。\n^yellow;次要攻击：史诗级的回旋斩^reset;",
-      "Eng": "Highly destructive. Don't poke your eye out.\n^cyan;Epic Swooshy Alt^reset;"
+      "Eng": "Highly destructive. Don't poke your eye out.\n^blue;Inflicts Electrified^reset;\n^cyan;Epic Swooshy Alt^reset;"
     }
   }
 ]
