--- a/translations/texts/items/active/weapons/melee/dagger/nightardagger.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/dagger/nightardagger.activeitem.json
@@ -39,12 +39,36 @@
     "DeniedAlternatives": [],
     "Files": {
       "items/active/weapons/melee/dagger/nightardagger.activeitem": [
+        "/upgradeParameters2/shortdescription"
+      ]
+    },
+    "Texts": {
+      "Chs": "传说的夜之刃",
+      "Eng": "Legendary Nightar Blade"
+    }
+  },
+  {
+    "DeniedAlternatives": [],
+    "Files": {
+      "items/active/weapons/melee/dagger/nightardagger.activeitem": [
         "/shortdescription"
       ]
     },
     "Texts": {
       "Chs": "夜之小刀",
       "Eng": "Nightarian Knife"
+    }
+  },
+  {
+    "DeniedAlternatives": [],
+    "Files": {
+      "items/active/weapons/melee/dagger/nightardagger.activeitem": [
+        "/upgradeParameters/shortdescription"
+      ]
+    },
+    "Texts": {
+      "Chs": "卓越的夜之刃",
+      "Eng": "Peerless Nightar Blade"
     }
   },
   {
