--- a/translations/texts/items/active/weapons/melee/greataxe/lunarigreataxe.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/greataxe/lunarigreataxe.activeitem.json
@@ -7,8 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "晶莹剔透的美丽。\n^cyan;+12%眩晕几率^reset;",
-      "Eng": "Glistening with crystalline beauty.\n^cyan;+12% Stun chance^reset;"
+      "Eng": "Glistening with crystalline beauty.\n^blue;Slows Enemies^reset;\n^cyan;+12% Stun chance^reset;"
     }
   },
   {
