--- a/translations/texts/items/active/weapons/melee/hammer/fuquantumhammer.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/hammer/fuquantumhammer.activeitem.json
@@ -7,8 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "横跨了两个宇宙，真是太棒了。",
-      "Eng": "Straddles two universes. Amazing."
+      "Eng": "Straddles two universes. Amazing.\n^red;Deals Physical Damage^reset;"
     }
   }
 ]
