--- a/translations/texts/items/active/weapons/melee/spear/kirhosispear.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/spear/kirhosispear.activeitem.json
@@ -19,8 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "用来烧穿船体，进行深空登舰。\n^cyan;狩猎武器^reset;",
-      "Eng": "Used to burn through ship hulls for deep-space boarding.\n^cyan;Hunting weapon^reset;"
+      "Eng": "Used to burn through ship hulls for deep-space boarding.\n^cyan;Hunting weapon^reset;\n^red;Inflicts Bleeding^reset;"
     }
   }
 ]
