--- a/translations/texts/items/active/weapons/melee/spear/shovelspear.activeitem.json
+++ b/translations/texts/items/active/weapons/melee/spear/shovelspear.activeitem.json
@@ -7,8 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "识铲骑士的杀戮利器。\n^cyan;狩猎武器^reset;",
-      "Eng": "A dangerous shovel for the discerning knight.\n^cyan;Hunting weapon^reset;"
+      "Eng": "A dangerous shovel for the discerning knight.\n^cyan;Hunting weapon^reset;\n^red;Inflicts Bleeding^reset;"
     }
   },
   {
@@ -43,8 +42,7 @@
       ]
     },
     "Texts": {
-      "Chs": "是全宇宙数一数二的铲铲。\n^yellow;毋须质疑^reset;",
-      "Eng": "The greatest shovel in the universe. ^yellow;It's true.^reset;"
+      "Eng": "The greatest shovel in the universe. ^yellow;It's true.^reset;\n^cyan;Hunting weapon^reset;\n^red;Inflicts Bleeding^reset;"
     }
   }
 ]
