--- a/translations/texts/tiles/materials.json
+++ b/translations/texts/tiles/materials.json
@@ -2,6 +2,21 @@
   {
     "DeniedAlternatives": [],
     "Files": {
+      "tiles/materials/dollhouse/dollhousecrosshatch.material": [
+        "/description"
+      ],
+      "tiles/materials/shojilattice.material": [
+        "/description"
+      ]
+    },
+    "Texts": {
+      "Chs": "一种用木材做成的简单窗棂。",
+      "Eng": "A simple lattice made of wood."
+    }
+  },
+  {
+    "DeniedAlternatives": [],
+    "Files": {
       "tiles/materials/fujellyblock.material": [
         "/description"
       ],
