--- a/translations/texts/codex/documents/networkguide.codex.json
+++ b/translations/texts/codex/documents/networkguide.codex.json
@@ -145,6 +145,17 @@
     "DeniedAlternatives": [],
     "Files": {
       "codex/documents/networkguide.codex": [
+        "/contentPages/4"
+      ]
+    },
+    "Texts": {
+      "Eng": "Object Data Sensor: Crafted in the tinkering table. Detects object placement points, to allow for more precise placement of Storage Bridges. Bridges select a single container based on the distance between themselves and object placement points."
+    }
+  },
+  {
+    "DeniedAlternatives": [],
+    "Files": {
+      "codex/documents/networkguide.codex": [
         "/contentPages/13"
       ]
     },
@@ -175,18 +186,6 @@
     "Texts": {
       "Chs": "请密切关注各种ITN设备的物品栏提示，提示会准确地告诉你每个设备的节点用于什么。还有一点需注意，一些设备的说明会在被放置后改变， - 请在存箱和放置的时候仔细检查！还有一件事，虽然许多ITN设备都有电源节点，可以用来切换激活和非激活状态，但是ITN对象不需要电力(由发电机产生)也能工作。",
       "Eng": "Pay close attention to the item tooltips for the various ITN objects, these will tell you exactly what each of that object's nodes are used for. Also be aware that some item descriptions will change after being placed - examine them both in your inventory and while placed! Also note that while many of these objects have power nodes that can be used to toggle them between active and inactive, none of the ITN objects require power (as created by generators) to function."
-    }
-  },
-  {
-    "DeniedAlternatives": [],
-    "Files": {
-      "codex/documents/networkguide.codex": [
-        "/contentPages/4"
-      ]
-    },
-    "Texts": {
-      "Chs": "点感应器：在纳米加工器中制造。检测对象的放置点，以使储存桥接器的设置更加精确。储存桥接器会根据自己和对象放置点之间的距离选择单一的容器。",
-      "Eng": "Point Sensor: Made in the nanofabricator. Detects object placement points, to allow for more precise placement of Storage Bridges. Bridges select a single container based on the distance between themselves and object placement points."
     }
   },
   {
