创建人物界面，耳廓狐和影裔的翻译 	modified:   translations/patches/species/fenerox.species.json 	modified:   translations/patches/species/shadow.species.json 	modified:   translations/patches/species/shared_.species.json

--- a/translations/patches/species/fenerox.species.json
+++ b/translations/patches/species/fenerox.species.json
@@ -31,6 +31,7 @@
       ]
     },
     "Texts": {
+      "Chs": "毛色",
       "Eng": "Fur colour"
     }
   },
@@ -42,6 +43,7 @@
       ]
     },
     "Texts": {
+      "Chs": "肤色",
       "Eng": "Skin colour"
     }
   }
