--- a/translations/patches/species/shared_.species.json
+++ b/translations/patches/species/shared_.species.json
@@ -10,6 +10,7 @@
       ]
     },
     "Texts": {
+      "Chs": "发色",
       "Eng": "Hair colour"
     }
   },
@@ -24,6 +25,7 @@
       ]
     },
     "Texts": {
+      "Chs": "发型",
       "Eng": "Hair style"
     }
   },
@@ -38,6 +40,7 @@
       ]
     },
     "Texts": {
+      "Chs": "腿部穿着",
       "Eng": "Legwear"
     }
   },
@@ -52,6 +55,7 @@
       ]
     },
     "Texts": {
+      "Chs": "腿部穿着颜色",
       "Eng": "Legwear colour"
     }
   },
@@ -66,6 +70,7 @@
       ]
     },
     "Texts": {
+      "Chs": "个性",
       "Eng": "Personality"
     }
   },
@@ -80,6 +85,7 @@
       ]
     },
     "Texts": {
+      "Chs": "上衣",
       "Eng": "Shirt"
     }
   },
@@ -94,6 +100,7 @@
       ]
     },
     "Texts": {
+      "Chs": "上衣颜色",
       "Eng": "Shirt colour"
     }
   },
